# szthreadpool

./: .gitignore  CMakeLists.txt  README.md
include/: join_threads.h  thread_pool.h  thread_pool_c.h  threadsafe_queue.h
src/: main.c  main.cpp  thread_pool.cpp  thread_pool_c.c  threadsafe_queue.cpp
